add official product verification
